# agentic-ai-playbook

./: .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml
01-foundations/: 01-what-are-agents.md  02-agent-architecture-patterns.md  03-core-concepts.md  04-agent-vs-llm-vs-rag.md  05-types-of-agents.md
03-projects/: README.md
03-projects/01-research-assistant/: README.md
03-projects/02-coding-agent/: README.md
03-projects/03-support-agent/: README.md
03-projects/04-data-analysis-agent/: README.md
03-projects/05-browser-agent/: README.md
03-projects/06-autonomous-workflow/: README.md
04-production/: README.md
04-production/01-deployment/: aws.md  docker.md  gcp.md  kubernetes.md  serverless.md
04-production/02-monitoring/: observability.md
04-production/03-evaluation/: testing.md
04-production/04-scaling/: performance.md
04-production/05-security/: guardrails.md
04-production/06-cost-optimization/: cost-control.md
04-production/07-ci-cd/: pipeline.md
04-production/08-case-studies/: README.md
05-resources/: communities.md  courses.md  indian-market-insights.md  interview-prep.md  papers.md
06-templates/agent-template/: README.md
06-templates/deployment-template/: README.md
06-templates/project-template/: README.md
